Friendly Captcha integration

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
         <% if (prod) { %>
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'none'; script-src 'self' 'unsafe-eval' https://api.mapbox.com https://cdnjs.cloudflare.com https://js.sentry-cdn.com https://browser.sentry-cdn.com; connect-src 'self' https://*.sentry.io https://api.mapbox.com https://api.giphy.com; img-src 'self' https://media0.giphy.com data: blob:; style-src 'self' 'unsafe-inline' https://api.mapbox.com; font-src 'self' data:; worker-src blob:; child-src blob:"
+            content="default-src 'none'; script-src 'self' 'unsafe-eval' https://api.mapbox.com https://cdnjs.cloudflare.com https://unpkg.com https://js.sentry-cdn.com https://browser.sentry-cdn.com; connect-src 'self' https://*.sentry.io https://api.mapbox.com https://api.giphy.com https://api.friendlycaptcha.com; img-src 'self' https://media0.giphy.com data: blob:; style-src 'self' 'unsafe-inline' https://api.mapbox.com; font-src 'self' data:; worker-src blob:; child-src blob:"
         />
         <link rel="preconnect" href="https://api.mapbox.com" />
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
