Attempt to understand contact form failure

--- a/src/template.html
+++ b/src/template.html
@@ -61,6 +61,7 @@
             src="https://js.sentry-cdn.com/43c7a02f9aab4d5a8e99d34e175d8951.min.js"
             crossorigin="anonymous"
             defer="defer"
+            data-lazy="no"
         ></script>
         <% } %>
     </head>
