Fix referrer for loading GIFs

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
         <% } %>
         <meta name="robots" content="noarchive, notranslate" />
-        <meta name="referrer" content="no-referrer" />
+        <meta name="referrer" content="strict-origin-when-cross-origin" />
         <link
             rel="icon"
             href="favicon.ico"
