Add static Open Graph
https://ogp.me

--- a/src/template.html
+++ b/src/template.html
@@ -27,6 +27,20 @@
             type="image/vnd.microsoft.icon"
         />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <meta
+            property="og:title"
+            content="Nature Photo Gallery &amp; Adventure Stories"
+        />
+        <meta
+            property="og:image"
+            content="https://www.explorewilder.com/content/mix.jpg"
+        />
+        <meta property="og:image:type" content="image/jpeg" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="798" />
+        <meta property="og:image:alt" content="Best of album" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.explorewilder.com/" />
         <link rel="author" href="humans.txt" />
         <link
             rel="alternate"
