--- a/src/template.html
+++ b/src/template.html
@@ -91,6 +91,13 @@
         <div class="loading-js">
             <div class="content">
                 <p>Loading...</p>
+                <noscript>
+                    <p>
+                        <a href="/jssources/jslicenses.html" rel="jslicense">
+                            JavaScript license information
+                        </a>
+                    </p>
+                </noscript>
             </div>
         </div>
     </body>
