--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
         -->
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'none'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://api.mapbox.com https://cdnjs.cloudflare.com https://unpkg.com; connect-src 'self' https://api.mapbox.com https://api.friendlycaptcha.com; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline' https://api.mapbox.com; font-src 'self' data:; worker-src blob:; child-src blob:; base-uri 'none'; form-action 'none'"
+            content="default-src 'none'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://api.mapbox.com https://cdnjs.cloudflare.com https://unpkg.com; connect-src 'self' https://api.mapbox.com; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline' https://api.mapbox.com; font-src 'self' data:; worker-src blob:; child-src blob:; base-uri 'none'; form-action 'none'"
         />
         <% } %>
         <meta name="robots" content="noarchive, notranslate" />
