fix robots metatag

--- a/src/404.html
+++ b/src/404.html
@@ -7,7 +7,7 @@
             http-equiv="Content-Security-Policy"
             content="default-src 'none'; img-src 'self'"
         />
-        <meta name="robots" content="noindex" />
+        <meta name="robots" content="none" />
         <link
             rel="icon"
             href="favicon.ico"
