--- a/src/template.html
+++ b/src/template.html
@@ -22,11 +22,11 @@
         <meta name="robots" content="none, noarchive, notranslate" />
         <link
             rel="icon"
-            href="favicon.ico"
+            href="/favicon.ico"
             sizes="16x16 24x24 32x32 64x64"
             type="image/vnd.microsoft.icon"
         />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
         <meta
             property="og:title"
             content="Nature Photo Gallery &amp; Adventure Stories"
