--- a/src/template.html
+++ b/src/template.html
@@ -51,6 +51,5 @@
         <title>Nature Photo Gallery &amp; Adventure Stories</title>
     </head>
 
-    <body>
-    </body>
+    <body></body>
 </html>
