--- a/src/template.html
+++ b/src/template.html
@@ -41,7 +41,10 @@
         <meta property="og:image:alt" content="Best of album" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://www.explorewilder.com/" />
-        <meta name="nano" content="nano_3i6d6o8k9ypczju6i1r6zrkrspqdp4wiuxtmt6acnuyxsscyju6nsk1yf3if" /> 
+        <meta
+            name="nano"
+            content="nano_3i6d6o8k9ypczju6i1r6zrkrspqdp4wiuxtmt6acnuyxsscyju6nsk1yf3if"
+        />
         <link
             rel="alternate"
             type="application/rss+xml"
