link to fediverse

--- a/src/template.html
+++ b/src/template.html
@@ -27,6 +27,7 @@
         <meta property="og:image:alt" content="Best of album" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://www.explorewilder.com/" />
+        <meta name="fediverse:creator" content="@explorewilder@photog.social" />
         <meta
             name="nano"
             content="nano_3i6d6o8k9ypczju6i1r6zrkrspqdp4wiuxtmt6acnuyxsscyju6nsk1yf3if"
